--- a/Zadatak 3/style.css
+++ b/Zadatak 3/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.img_container {
+.img__container {
   position: relative;
   background-image: url("img1.jpg");
   height: 700px;
@@ -40,7 +40,7 @@
   z-index: 1;
 }
 
-.form_box {
+.form-box {
   position: absolute;
   top: 63%;
   left: 20%;
@@ -49,17 +49,17 @@
   height: 580px;
   display: flex;
 }
-.form_box .fraction {
+.form-box .form-box__fraction {
   flex: 33.33%;
   text-align: center;
 }
-.form_box .orange {
+.form-box .form-box__fraction--orange {
   background-color: rgb(243, 162, 11);
 }
-.form_box .darkgrey {
+.form-box .form-box__fraction--darkgrey {
   background-color: rgb(67, 65, 65);
 }
-.form_box i {
+.form-box .form-box__icon {
   margin-top: 10%;
   font-size: 4em;
   width: 1.6em;
@@ -69,11 +69,11 @@
   border-radius: 0.8em;
   border: 2px solid white;
 }
-.form_box h2 {
+.form-box .form-box__title {
   margin-top: 10%;
   color: white;
 }
-.form_box p {
+.form-box .form-box__text {
   margin-top: 10%;
   width: 70%;
   margin-left: auto;
@@ -82,21 +82,21 @@
   text-align: center;
   line-height: 1.6;
 }
-.form_box #middle {
+.form-box #middle {
   margin-top: 25%;
 }
-.form_box form {
+.form-box .form-box__form {
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
   text-align: left;
 }
-.form_box form label {
+.form-box .form-box__form .form-box__form__label {
   color: rgb(163, 167, 172);
   font-size: 1.2em;
 }
-.form_box form input[type=text], .form_box form input[type=email] {
+.form-box .form-box__form .form-box__form__input__text, .form-box .form-box__form .form-box__form__input__email {
   margin-top: 5%;
   margin-bottom: 5%;
   padding: 15px;
@@ -104,7 +104,7 @@
   border: 1px solid rgb(163, 167, 172);
   background-color: transparent;
 }
-.form_box form input[type=submit] {
+.form-box .form-box__form .form-box__form__input__submit {
   margin-top: 5%;
   margin-bottom: 5%;
   padding: 15px;
@@ -129,10 +129,10 @@
     transform: translate(-50%, -50%);
     z-index: 1;
   }
-  .form_box {
+  .form-box {
     flex-direction: column;
   }
-  .fraction {
+  .form-box__fraction {
     flex: 100%;
   }
 }/*# sourceMappingURL=style.css.map */
