--- a/Zadatak 5/style.css
+++ b/Zadatak 5/style.css
@@ -13,11 +13,11 @@
   margin-bottom: 3%;
   text-align: center;
 }
-.header h3 {
+.header .header__subtitle {
   color: grey;
   margin-bottom: 10px;
 }
-.header h1 {
+.header .header__title {
   margin-top: 0;
   font-size: 2.3em;
 }
@@ -30,16 +30,16 @@
   margin-bottom: 5%;
   border-bottom: 4px solid rgb(249, 154, 30);
 }
-.menu .button {
+.menu .menu__button {
   padding: 15px 20px;
   font-size: 15px;
   color: rgb(70, 68, 68);
   font-weight: bold;
 }
-.menu .button:hover {
+.menu .menu__button:hover {
   background-color: rgb(249, 154, 30);
 }
-.menu .active {
+.menu .menu__button--active {
   background-color: rgb(249, 154, 30);
 }
 
@@ -51,20 +51,20 @@
   flex-direction: column;
   box-sizing: border-box;
 }
-.gallery .row {
+.gallery .gallery__row {
   flex: 100%;
   display: flex;
   flex-direction: row;
 }
-.gallery .row .img_container {
+.gallery .gallery__row .gallery__img-container {
   flex: 33.333%;
   height: 17vw;
   position: relative;
 }
-.gallery .row .img_container:hover .overlay {
+.gallery .gallery__row .gallery__img-container:hover .gallery__overlay {
   opacity: 1;
 }
-.gallery .row .img_container .overlay {
+.gallery .gallery__row .gallery__img-container .gallery__overlay {
   position: absolute;
   background-color: rgba(5, 5, 5, 0.7);
   width: 100%;
@@ -72,14 +72,14 @@
   top: 0;
   opacity: 0;
 }
-.gallery .row .img_container .overlay h3 {
+.gallery .gallery__row .gallery__img-container .gallery__overlay .gallery__overlay__title {
   position: absolute;
   top: 35%;
   left: 10%;
   color: white;
   font-size: bold;
 }
-.gallery .row .img_container .overlay .btn {
+.gallery .gallery__row .gallery__img-container .gallery__overlay .gallery__overlay__button {
   position: absolute;
   top: 65%;
   left: 10%;
@@ -90,13 +90,13 @@
   padding: 10px;
   display: table;
 }
-.gallery .row .img_container .overlay .btn span {
+.gallery .gallery__row .gallery__img-container .gallery__overlay .gallery__overlay__button--centred {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
   font-size: 15px;
 }
-.gallery .row .img_container .overlay .corner {
+.gallery .gallery__row .gallery__img-container .gallery__overlay .gallery__overlay__corner {
   position: absolute;
   top: 0;
   right: 0;
@@ -108,24 +108,24 @@
   background-color: rgb(249, 154, 30);
   display: table;
 }
-.gallery .row .img_container .overlay .corner i {
+.gallery .gallery__row .gallery__img-container .gallery__overlay .gallery__overlay__corner__icon {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
-.gallery img {
+.gallery .gallery__img {
   width: 100%;
   height: 17vw;
 }
 
-.footer_container {
+.footer-container {
   width: 100%;
   height: 800px;
   margin-top: 10%;
   background-color: black;
   position: relative;
 }
-.footer_container .section {
+.footer-container .footer-container__section {
   width: 60%;
   height: 400px;
   display: flex;
@@ -134,12 +134,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.footer_container .section .col {
+.footer-container .footer-container__section .footer-container__col {
   flex: 33.333%;
   height: 100%;
   position: relative;
 }
-.footer_container .section .col .vertical_line {
+.footer-container .footer-container__section .footer-container__col__vertical-line {
   width: 5px;
   height: 30px;
   background-color: rgb(249, 154, 30);
@@ -147,7 +147,7 @@
   top: 30px;
   left: 20px;
 }
-.footer_container .section .col .head {
+.footer-container .footer-container__section .footer-container__col__head {
   position: absolute;
   top: 37px;
   left: 50px;
@@ -155,182 +155,182 @@
   font-size: 15px;
   font-weight: bold;
 }
-.footer_container .section .col .icon_machine {
+.footer-container .footer-container__section .footer-container__col__icon-machine {
   position: absolute;
   top: 90px;
   left: 20px;
   color: rgb(249, 154, 30);
   font-size: 30px;
 }
-.footer_container .section .col .icon_machine .constra {
+.footer-container .footer-container__section .footer-container__col__icon-machine .footer-container__col__icon-machine__constra {
   color: white;
   font-size: 30px;
   font-weight: bold;
   font-family: Pacifico;
 }
-.footer_container .section .col .description {
+.footer-container .footer-container__section .footer-container__col__description {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   line-height: 1.6;
   top: 180px;
 }
-.footer_container .section .col .icons {
+.footer-container .footer-container__section .footer-container__col__icons {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   top: 280px;
 }
-.footer_container .section .col .icons i {
+.footer-container .footer-container__section .footer-container__col__icons .footer-container__col__icons__logos {
   padding-right: 9px;
 }
-.footer_container .section .col .second_description {
+.footer-container .footer-container__section .footer-container__col__second-description {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   line-height: 1.6;
   top: 90px;
 }
-.footer_container .section .col .working_hours .days {
+.footer-container .footer-container__section .footer-container__col__working_hours .days {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   top: 230px;
 }
-.footer_container .section .col .working_hours .hours {
+.footer-container .footer-container__section .footer-container__col__working_hours .hours {
   position: absolute;
   right: 10px;
   color: rgb(175, 170, 170);
   top: 230px;
 }
-.footer_container .section .col .working_hours .days2 {
+.footer-container .footer-container__section .footer-container__col__working_hours .days2 {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   top: 255px;
 }
-.footer_container .section .col .working_hours .hours2 {
+.footer-container .footer-container__section .footer-container__col__working_hours .hours2 {
   position: absolute;
   right: 10px;
   color: rgb(175, 170, 170);
   top: 255px;
 }
-.footer_container .section .col .working_hours .days3 {
+.footer-container .footer-container__section .footer-container__col__working_hours .days3 {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   top: 280px;
 }
-.footer_container .section .col .working_hours .hours3 {
+.footer-container .footer-container__section .footer-container__col__working_hours .hours3 {
   position: absolute;
   right: 10px;
   color: rgb(175, 170, 170);
   top: 280px;
 }
-.footer_container .section .col .term {
+.footer-container .footer-container__section .footer-container__col__term {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   width: 100%;
   top: 100px;
 }
-.footer_container .section .col .term i {
+.footer-container .footer-container__section .footer-container__col__term .footer-container__col__term__icon {
   padding-right: 10px;
 }
-.footer_container .section .col .term hr {
+.footer-container .footer-container__section .footer-container__col__term .footer-container__col__term__hr {
   background-color: rgba(175, 170, 170, 0.1);
   height: 1px;
   border: none;
   width: 100%;
 }
-.footer_container .section .col .term2 {
+.footer-container .footer-container__section .footer-container__col__term2 {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   width: 100%;
   top: 150px;
 }
-.footer_container .section .col .term2 i {
+.footer-container .footer-container__section .footer-container__col__term2 .footer-container__col__term__icon {
   padding-right: 10px;
 }
-.footer_container .section .col .term2 hr {
+.footer-container .footer-container__section .footer-container__col__term2 .footer-container__col__term__hr {
   background-color: rgba(175, 170, 170, 0.1);
   height: 1px;
   border: none;
   width: 100%;
 }
-.footer_container .section .col .term3 {
+.footer-container .footer-container__section .footer-container__col__term3 {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   width: 100%;
   top: 200px;
 }
-.footer_container .section .col .term3 i {
+.footer-container .footer-container__section .footer-container__col__term3 .footer-container__col__term__icon {
   padding-right: 10px;
 }
-.footer_container .section .col .term3 hr {
+.footer-container .footer-container__section .footer-container__col__term3 .footer-container__col__term__hr {
   background-color: rgba(175, 170, 170, 0.1);
   height: 1px;
   border: none;
   width: 100%;
 }
-.footer_container .section .col .term4 {
+.footer-container .footer-container__section .footer-container__col__term4 {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   width: 100%;
   top: 250px;
 }
-.footer_container .section .col .term4 i {
+.footer-container .footer-container__section .footer-container__col__term4 .footer-container__col__term__icon {
   padding-right: 10px;
 }
-.footer_container .section .col .term4 hr {
+.footer-container .footer-container__section .footer-container__col__term4 .footer-container__col__term__hr {
   background-color: rgba(175, 170, 170, 0.1);
   height: 1px;
   border: none;
   width: 100%;
 }
-.footer_container .section .col .term5 {
+.footer-container .footer-container__section .footer-container__col__term5 {
   position: absolute;
   left: 20px;
   color: rgb(175, 170, 170);
   width: 100%;
   top: 300px;
 }
-.footer_container .section .col .term5 i {
+.footer-container .footer-container__section .footer-container__col__term5 .footer-container__col__term__icon {
   padding-right: 10px;
 }
-.footer_container .section .col .term5 hr {
+.footer-container .footer-container__section .footer-container__col__term5 .footer-container__col__term__hr {
   background-color: rgba(175, 170, 170, 0.1);
   height: 1px;
   border: none;
   width: 100%;
 }
-.footer_container .footer {
+.footer-container .footer-container__footer {
   width: 100%;
   height: 100px;
   background-color: rgb(249, 154, 30);
   position: absolute;
   top: 75%;
 }
-.footer_container .footer .copyright {
+.footer-container .footer-container__footer .footer-container__copyright {
   position: absolute;
   top: 37%;
   left: 20%;
   padding-left: 15px;
   font-size: 13px;
 }
-.footer_container .footer .footer_menu {
+.footer-container .footer-container__footer .footer-container__footer-menu {
   position: absolute;
   top: 37%;
   left: 65%;
 }
-.footer_container .footer .footer_menu .footer_button {
+.footer-container .footer-container__footer .footer-container__footer-menu .footer-container__footer-menu__button {
   padding: 0 10px;
   font-size: 13px;
 }
-.footer_container .footer .arrow_up {
+.footer-container .footer-container__footer .footer-container__footer__arrow-up {
   position: absolute;
   top: 25%;
   right: 60px;
@@ -340,7 +340,7 @@
   display: table;
   border-radius: 10px;
 }
-.footer_container .footer .arrow_up i {
+.footer-container .footer-container__footer .footer-container__footer__arrow-up .footer-container__footer__arrow-up__icon {
   color: rgb(249, 154, 30);
   display: table-cell;
   vertical-align: middle;
@@ -358,38 +358,38 @@
   .gallery {
     display: block;
   }
-  .gallery .row {
+  .gallery .gallery__row {
     display: block;
   }
-  .gallery .row .img_container {
+  .gallery .gallery__row .gallery__img-container {
     height: 300px;
   }
-  .gallery img {
+  .gallery .gallery__img {
     height: 300px;
   }
-  .footer_container {
+  .footer-container {
     height: 1300px;
   }
-  .footer_container .section {
+  .footer-container .footer-container__section {
     display: block;
     top: 20%;
     width: 100%;
   }
-  .footer_container .section .col {
+  .footer-container .footer-container__section .footer-container__col {
     display: block;
   }
-  .footer_container .footer {
+  .footer-container .footer-container__footer {
     top: 100%;
   }
-  .footer_container .footer .copyright {
+  .footer-container .footer-container__footer .footer-container__copyright {
     top: 20%;
     left: 5%;
   }
-  .footer_container .footer .footer_menu {
+  .footer-container .footer-container__footer .footer-container__footer-menu {
     top: 60%;
     left: 5%;
   }
-  .footer_container .footer .arrow_up {
+  .footer-container .footer-container__footer .footer-container__footer__arrow-up {
     right: 30px;
   }
 }
@@ -403,38 +403,38 @@
   .gallery {
     display: block;
   }
-  .gallery .row {
+  .gallery .gallery__row {
     display: block;
   }
-  .gallery .row .img_container {
+  .gallery .gallery__row .gallery__img-container {
     height: 500px;
   }
-  .gallery img {
+  .gallery .gallery__img {
     height: 500px;
   }
-  .footer_container {
+  .footer-container {
     height: 1300px;
   }
-  .footer_container .section {
+  .footer-container .footer-container__section {
     display: block;
     top: 20%;
     width: 100%;
   }
-  .footer_container .section .col {
+  .footer-container .footer-container__section .footer-container__col {
     display: block;
   }
-  .footer_container .footer {
+  .footer-container .footer-container__footer {
     top: 100%;
   }
-  .footer_container .footer .copyright {
+  .footer-container .footer-container__footer .footer-container__copyright {
     top: 40%;
     left: 5%;
   }
-  .footer_container .footer .footer_menu {
+  .footer-container .footer-container__footer .footer-container__footer-menu {
     top: 40%;
     left: 45%;
   }
-  .footer_container .footer .arrow_up {
+  .footer-container .footer-container__footer .footer-container__footer__arrow-up {
     right: 30px;
   }
 }/*# sourceMappingURL=style.css.map */
