--- a/Zadatak 6/style.scss
+++ b/Zadatak 6/style.scss
@@ -32,7 +32,7 @@ body::before {
     width: 25%;
     height: 400px;
 
-    .top {
+    .box__top {
         position: absolute;
         top: 10%;
         left: 50px;
@@ -40,7 +40,7 @@ body::before {
         font-weight: bold;
     }
 
-    h1 {
+    .box__title {
         position: absolute;
         top: 20%;
         left: 50px;
@@ -48,7 +48,7 @@ body::before {
         line-height: 1.4;
     }
 
-    .bot {
+    .box__bot {
         position: absolute;
         top: 65%;
         left: 50px;
@@ -57,19 +57,19 @@ body::before {
         line-height: 1.4;
     }
 
-    .number {
+    .box__number {
         position: absolute;
         top: 83%;
         left: 50px;
         right: 100px;
 
-        i {
+        .box__icon {
             font-size: 25px;
             color: rgb(252, 40, 40);
             padding-right: 20px;
         }
 
-        span {
+        .box__num {
             font-size: 25px;
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bold;
@@ -83,19 +83,19 @@ body::before {
         height: 50vh;
         left: 0;
 
-        .top {
+        .box__top {
             top: 5%;
         }
 
-        h1 {
+        .box__title {
             top: 15%;
         }
 
-        .bot {
+        .box__bot {
             top: 55%;
         }
 
-        .number {
+        .box__number {
             top: 75%;
         }
     }
@@ -107,11 +107,11 @@ body::before {
         left: 15%;
         right: 15%;
 
-        .bot {
+        .box__bot {
             top: 55%;
         }
 
-        .number {
+        .box__number {
             top: 70%;
         }
     }
