--- a/Zadatak 7/style.scss
+++ b/Zadatak 7/style.scss
@@ -10,13 +10,13 @@
     margin-bottom: 5%;
     text-align: center;
 
-    p {
+    .header__subtitle {
         font-size: 18px;
         margin-bottom: 10px;
         color: grey;
     }
 
-    h1 {
+    .header__title {
         margin-top: 0;
         font-size: 45px;
     }
@@ -28,27 +28,27 @@
     margin-left: auto;
     margin-right: auto;
 
-    .col {
+    .container__col {
         flex: 33.333%;
         height: 50vh;
     }
 
-    .image {
+    .container__image {
         height: 60vh;
         background-image: url("img1.jpg");
         background-repeat: no-repeat;
         background-size: cover;
     }
 
-    .content {
+    .container__content {
         display: flex;
         flex-direction: column;
 
-        .cnt {
+        .container__cnt {
             flex: 33.333%;
             position: relative;
 
-            i {
+            .container__cnt__icon {
                 position: absolute;
                 top: 13%;
                 left: 0;
@@ -56,14 +56,14 @@
                 color: rgb(245, 190, 9);
             }
 
-            h4 {
+            .container__cnt__title {
                 position: absolute;
                 top: 0;
                 left: 25%;
                 color: rgb(48, 47, 47);
             }
 
-            p {
+            .container__cnt__text {
                 position: absolute;
                 top: 25%;
                 left: 25%;
@@ -79,7 +79,7 @@
         width: 100%;
         display: block;
 
-        .image {
+        .container__image {
             display: none;
         }
     }
@@ -89,11 +89,11 @@
     .container {
         width: 100%;
 
-        .image {
+        .container__image {
             display: none;
         }
 
-        .content {
+        .container__content {
             padding: 0 10px;
         }
     }
